feat: 更新网页title 和 icon

--- a/TauriApp/index.html
+++ b/TauriApp/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/AppIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Vue + Typescript App</title>
+    <title>Task Flow - 一款现代化、隐私优先的个人任务管理应用，基于 Tauri v2 和 Vue 3 构建</title>
   </head>
 
   <body>
